--- a/package.json
+++ b/package.json
@@ -19,12 +19,17 @@
     "@angular/platform-browser": "^19.2.12",
     "@angular/platform-browser-dynamic": "^19.2.12",
     "@angular/router": "^19.2.12",
+    "@ngrx/effects": "^19.2.0",
+    "@ngrx/entity": "^19.2.0",
+    "@ngrx/store": "^19.2.0",
+    "@ngrx/store-devtools": "^19.2.0",
     "rxjs": "^7.8.2",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.2.13",
+    "@angular-devkit/core": "^19.2.13",
     "@angular-eslint/builder": "19.4.0",
     "@angular-eslint/eslint-plugin": "19.4.0",
     "@angular-eslint/eslint-plugin-template": "19.4.0",
@@ -32,6 +37,7 @@
     "@angular-eslint/template-parser": "19.4.0",
     "@angular/cli": "^19.2.13",
     "@angular/compiler-cli": "^19.2.12",
+    "@ngrx/eslint-plugin": "^19.2.0",
     "@types/jasmine": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "8.32.1",
     "@typescript-eslint/parser": "8.32.1",
