--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^19.2.12",
     "@ngrx/effects": "^19.2.0",
     "@ngrx/entity": "^19.2.0",
+    "@ngrx/operators": "^19.2.0",
     "@ngrx/router-store": "^19.2.0",
     "@ngrx/store": "^19.2.0",
     "@ngrx/store-devtools": "^19.2.0",
@@ -40,6 +41,8 @@
     "@angular-eslint/template-parser": "19.4.0",
     "@angular/cli": "^19.2.13",
     "@angular/compiler-cli": "^19.2.12",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.27.0",
     "@ngrx/eslint-plugin": "^19.2.0",
     "@types/jasmine": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "8.32.1",
