--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@angular/compiler": "^19.2.10",
     "@angular/core": "^19.2.10",
     "@angular/forms": "^19.2.10",
+    "@angular/material": "^19.2.17",
     "@angular/platform-browser": "^19.2.10",
     "@angular/platform-browser-dynamic": "^19.2.10",
     "@angular/router": "^19.2.10",
+    "add": "^2.0.6",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
