--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^19.2.10",
     "@angular/platform-browser-dynamic": "^19.2.10",
     "@angular/router": "^19.2.10",
+    "@ngrx/router-store": "^19.2.0",
+    "@ngrx/store": "^19.2.0",
     "dotenv": "^16.5.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
@@ -35,6 +37,7 @@
     "@angular-eslint/template-parser": "19.4.0",
     "@angular/cli": "^19.2.12",
     "@angular/compiler-cli": "^19.2.10",
+    "@ngrx/eslint-plugin": "^19.2.0",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "8.32.1",
     "@typescript-eslint/parser": "8.32.1",
