--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^19.2.10",
     "@angular/router": "^19.2.10",
     "add": "^2.0.6",
+    "crypto-js": "^4.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
@@ -34,6 +35,7 @@
     "@angular-eslint/template-parser": "19.4.0",
     "@angular/cli": "^19.2.12",
     "@angular/compiler-cli": "^19.2.10",
+    "@types/crypto-js": "^4.2.2",
     "@types/jasmine": "~4.3.0",
     "@typescript-eslint/eslint-plugin": "8.32.1",
     "@typescript-eslint/parser": "8.32.1",
