--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "ng serve --configuration local",
     "build": "ng build",
-    "watch": "ng build --watch --configuration development",
+    "watch": "ng build --watch --configuration local",
     "test": "ng test",
     "lint": "ng lint"
   },
@@ -27,6 +27,7 @@
     "@ngrx/store": "^19.2.0",
     "@ngrx/store-devtools": "^19.2.0",
     "rxjs": "~7.8.0",
+    "ts-md5": "^1.3.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
