--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser": "^19.2.10",
     "@angular/platform-browser-dynamic": "^19.2.10",
     "@angular/router": "^19.2.10",
+    "@ngrx/effects": "^19.2.0",
+    "@ngrx/entity": "^19.2.0",
     "@ngrx/router-store": "^19.2.0",
     "@ngrx/store": "^19.2.0",
     "dotenv": "^16.5.0",
