--- a/package.json
+++ b/package.json
@@ -40,11 +40,11 @@
     "@angular-eslint/template-parser": "19.4.0",
     "@angular/cli": "^19.2.12",
     "@angular/compiler-cli": "^19.2.10",
-    "@types/jasmine": "~4.3.0",
+    "@types/jasmine": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "8.32.1",
     "@typescript-eslint/parser": "8.32.1",
-    "eslint": "^8.51.0",
-    "jasmine-core": "~4.6.0",
+    "eslint": "^9.27.0",
+    "jasmine-core": "^5.7.1",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
