--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@ngrx/entity": "^19.2.0",
     "@ngrx/router-store": "^19.2.0",
     "@ngrx/store": "^19.2.0",
+    "@ngrx/store-devtools": "^19.2.0",
     "dotenv": "^16.5.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
