--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
     "@angular/platform-browser": "^19.2.10",
     "@angular/platform-browser-dynamic": "^19.2.10",
     "@angular/router": "^19.2.10",
+    "@angular/cdk": "^19.2.10",
+    "@ngrx/store": "^19.2.0",
+    "@ngrx/effects": "^19.2.0",
+    "@ngrx/entity": "^19.2.0",
+    "@ngrx/router-store": "^19.2.0",
+    "@ngrx/component-store": "^19.2.0",
     "add": "^2.0.6",
     "crypto-js": "^4.2.0",
     "rxjs": "~7.8.0",
