Added test env.

--- a/angular.json
+++ b/angular.json
@@ -58,6 +58,16 @@
               "extractLicenses": false,
               "sourceMap": true,
               "namedChunks": true
+            },
+            "test": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true,
+              "namedChunks": true,
+              "fileReplacements": [{
+                "replace": "src/environments/environment.ts",
+                "with": "src/environment/environment.test.ts"
+              }]
             }
           },
           "defaultConfiguration": "production"
@@ -70,6 +80,9 @@
             },
             "development": {
               "buildTarget": "angular-template:build:development"
+            },
+            "test": {
+              "buildTarget": "angular-template:build:test"
             }
           },
           "defaultConfiguration": "development"
@@ -82,6 +95,11 @@
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
+          "defaultConfiguration": "test",
+          "configurations": {
+            "test": {
+            }
+          },
           "options": {
             "polyfills": [
               "zone.js",
@@ -97,7 +115,11 @@
               "@angular/material/prebuilt-themes/cyan-orange.css",
               "src/styles.scss"
             ],
-            "scripts": []
+            "scripts": [],
+            "fileReplacements": [{
+              "replace": "src/environments/environment.ts",
+              "with": "src/environments/environment.test.ts"
+            }]
           }
         },
         "lint": {
