--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "@angular/cli": "^19.2.12",
     "@angular/compiler-cli": "^19.2.10",
     "@types/jasmine": "^5.1.8",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^22.15.24",
     "@typescript-eslint/eslint-plugin": "8.32.1",
     "@typescript-eslint/parser": "8.32.1",
     "eslint": "^9.27.0",
