--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^19.2.10",
     "@ngrx/effects": "^19.2.0",
     "@ngrx/entity": "^19.2.0",
+    "@ngrx/operators": "^19.2.0",
     "@ngrx/router-store": "^19.2.0",
     "@ngrx/store": "^19.2.0",
     "@ngrx/store-devtools": "^19.2.0",
